refactor(lotto): 숫자 매직넘버 상수 처리 진행!